force-app/main/default/objects/Service_Catalog_Fields__c/Service_Catalog_Fields__c.object-meta.xml
<CustomObject>
    <label>Service Catalog Fields</label>
    <nameField>
        <label>Service Catalog Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Catalog Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>