force-app/main/default/objects/Service_Catalog_Fields__c/fields/FIeld_API_Name__c.field-meta.xml
<CustomField>
    <fullName>FIeld_API_Name__c</fullName>
    <label>FIeld API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>