force-app/main/default/objects/Service_Catalog_Fields__c/fields/is_Date__c.field-meta.xml
<CustomField>
    <fullName>is_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Date</label>
    <type>Checkbox</type>
</CustomField>