force-app/main/default/objects/Service_Catalog_Fields__c/fields/is_Decimal__c.field-meta.xml
<CustomField>
    <fullName>is_Decimal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Decimal</label>
    <type>Checkbox</type>
</CustomField>