force-app/main/default/objects/Service_Catalog_Fields__c/fields/Service_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Service_Catalog__c</fullName>
    <label>Service Catalog</label>
    <referenceTo>Service_Catalog__c</referenceTo>
    <relationshipLabel>Service Catalog Fields</relationshipLabel>
    <relationshipName>Service_Catalog_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>